--- a/scales.tex
+++ b/scales.tex
@@ -10,7 +10,6 @@
 \fancyhead{} % Blank out the default header
 \fancyfoot{} % Blank out the default footer
 \fancyhead[C]{Scales and Exercises}
-\fancyfoot[R]{\thepage} 
 
 \title{\vspace{-15mm}\fontsize{24pt}{10pt}\selectfont\textbf{Scales and Exercise} \\
    \vspace{1cm}
@@ -22,13 +21,12 @@
 
 % Remove section numbering
 \setcounter{secnumdepth}{0}
-
-% TODO: Make subsections title centred
-% TODO: Increase space after subsections
-% TODO: Make Staffs bigger
-% TODO: Make page horizontal
+\usepackage{titlesec}
+\titlespacing*{\subsection}
+{0pt}{5.5ex plus 1ex minus .2ex}{4.3ex plus .2ex}
 
 \begin{document}
+
 \maketitle % Insert title
 \thispagestyle{empty} % Title Page
 \clearpage
@@ -37,8 +35,15 @@
    \section{A Major Scales}
 
    \subsection{No Slurs}
-   
-   \begin{lilypond}
+
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
       \relative a'{
         \clef treble
         \key a \major
@@ -50,27 +55,43 @@
         d-3 cis-2 b-1 a-0 | a1-0|
       }
    \end{lilypond}
-   
+
 
    \subsection{Quarter Note Slurs}
-   
-   \begin{lilypond}
+
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
       \relative a'{
         \clef treble
         \key a \major
         \time 4/4
 
         a-0( b-1) cis-2( d-3) |
-        e-0( fis-1) gis-2( a-3) |
+        e-0( fis-1) gis-2( a-3) |\break
         a-3( gis-2) fis-1( e-0) |
         d-3( cis-2) b-1( a-0) |
       }
    \end{lilypond}
-   
+
 
    \subsection{Eighth Note Slurs}
    
-   \begin{lilypond}
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
       \relative a'{
         \clef treble
         \key a \major
@@ -79,41 +100,26 @@
 % TODO: fix the grouping to be 4 4 4 4...
 
         a8-0( b8-1 cis8-2 d8-3)
-        e8-0( fis8-1 gis8-2 a8-3) |
+        e8-0( fis8-1 gis8-2 a8-3) |\break
         a8-3( gis8-2 fis8-1 e8-0)
         d8-3( cis8-2 b8-1 a8-0) |
       }
    \end{lilypond}
-   
-
-   \subsection{Tressesls in A Major}
-   
-   \begin{lilypond}
-      \relative a'{
-        \clef treble
-        \key a \major
-        \time 4/4
-
-        a-0 cis-2 b-1 d-3 |
-        cis-2 e-4 d-3 fis-1 |
-        e-0 gis-2 fis-1 a-3 |
-        gis-2 b-4 a2-3 |
-
-        a4-3 fis-1 gis-2 e-0 |
-        fis-1 d-3 e-4 cis-2 |
-        d-3 b-1 cis-2 a-0 |
-        b-1 gis-3 a2-0 |
-      }
-   \end{lilypond}
-   
-
    \clearpage
 
    \section{G Scales}
 
    \subsection{G Major 2 Octaves}
-   
-   \begin{lilypond}
+
+   \begin{lilypond}[staffsize=26]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
       \relative g{
         \clef treble
         \key g \major
@@ -122,19 +128,27 @@
         g-0 a-1 b-2 c-3 |
         d-0 e-1 fis-2 g-3 |
         g-3 a-0 b-1 c-2 |
-        d-3 e-0 fis-1 g-2 |
-        
+        d-3 e-0 fis-1 g-2 |\break
+
         g-2 fis-1 e-4 d-3 |
         c-2 b-1 a-4 g-3 |
         g-3 fis-2 e-1 d-4 |
         c-3 b-2 a-1 g-0 | g1-0
       }
    \end{lilypond}
-   
+
 
    \subsection{G Melodic Minor 2 Octaves}
-   
-   \begin{lilypond}
+
+   \begin{lilypond}[staffsize=26]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
       \relative g{
         \clef treble
         \key g \major
@@ -143,18 +157,27 @@
         g-0 a-1 bes-2 c-3 |
         d-0 e-1 fis-2 g-3 |
         g-3 a-0 bes-1 c-2 |
-        d-3 e-0 fis-1 g-2 |
+        d-3 e-0 fis-1 g-2 |\break
+
         g-2 f-1 ees-4 d-3 |
         c-2 bes-1 a-4 g-3 |
         g-3 f-2 ees-1 d-4 |
         c-3 bes-2 a-1 g-0 | g1-0
       }
    \end{lilypond}
-   
+
 
    \subsection{G Harmonic Minor 2 Octaves}
-   
-   \begin{lilypond}
+
+   \begin{lilypond}[staffsize=26]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
       \relative g{
         \clef treble
         \key g \major
@@ -163,18 +186,152 @@
         g-0 a-1 bes-2 c-3 |
         d-0 ees-1 fis-2 g-3 |
         g-3 a-0 bes-1 c-2 |
-        d-3 ees-4 fis-1 g-2 |
+        d-3 ees-4 fis-1 g-2 |\break
+
         g-2 fis-1 ees-4 d-3 |
         c-2 bes-1 a-4 g-3 |
         g-3 fis-2 ees-1 d-4 |
         c-3 bes-2 a-1 g-0 | g1-0
       }
    \end{lilypond}
-   
+   \clearpage
 
+   \section{Arpeggios}
+
+   \subsection{G Major Arpeggio}
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
+      \relative g{
+        \clef treble
+        \key g \major
+        \time 3/4
+
+        g-0( b-2 d-0) |
+        g-3( b-1 d-3) |
+        g-2( d-3 b-1) |
+        g-3( d-4 b-2) |
+        g1-0
+      }
+   \end{lilypond}
+
+   \subsection{G Minor Arpeggio}
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
+      \relative g{
+        \clef treble
+        \key g \major
+        \time 3/4
+
+        g-0( bes-2 d-0) |
+        g-3( bes-1 d-3) |
+        g-2( d-3 bes-1) |
+        g-3( d-4 bes-2) |
+        g1-0
+      }
+   \end{lilypond}
+
+   \subsection{A Major Arpeggio}
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
+      \relative g{
+        \clef treble
+        \key a \major
+        \time 3/4
+
+        a-1( cis-3 e-1) |
+        a-0( cis-2 e-0) |
+        a-3( e-4 cis-2) |
+        a-4( e-1 cis-3) |
+        a1-1
+      }
+   \end{lilypond}
+
+   \subsection{A Minor Arpeggio}
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
+      \relative g{
+        \clef treble
+        \key a \major
+        \time 3/4
+
+        a-1( c-3 e-1) |
+        a-0( c-2 e-0) |
+        a-3( e-4 c-2) |
+        a-4( e-1 c-3) |
+        a1-1
+      }
+   \end{lilypond}
+   \clearpage
+
+   \section{Other Scale Excesses}
+
+   \subsection{A Major Tressels}
+   
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
+      \relative a'{
+        \clef treble
+        \key a \major
+        \time 4/4
+
+        a-0 cis-2 b-1 d-3 |
+        cis-2 e-4 d-3 fis-1 | \break
+        e-0 gis-2 fis-1 a-3 |
+        gis-2 b-4 a2-3 | \break
+
+        a4-3 fis-1 gis-2 e-0 |
+        fis-1 d-3 e-4 cis-2 | \break
+        d-3 b-1 cis-2 a-0 |
+        b-1 gis-3 a2-0 | \break
+      }
+   \end{lilypond}
+   
    \subsection{G Major in Octaves}
    
-   \begin{lilypond}
+   \begin{lilypond}[staffsize=30]
+      \layout {
+         \context {
+            \Score
+            \omit BarNumber
+         }
+      }
+
+
       \relative g{
         \clef treble
         \key g \major
@@ -183,26 +340,25 @@
         g2-0 g'2-3 |
         a,-1 a'-4 |
         b,-2 b'-1 |
-        c,-3 c'-2 |
+        c,-3 c'-2 | \break
 
         d,-0 d'-3 |
         e,-1 e'-4 |
         fis,-2 fis'-1 |
-        g,-3 g'-2 |
+        g,-3 g'-2 | \break
 
         g-2 g,-3 |
         fis'-1 fis,-2 |
         e'-4 e,-1 |
-        d'-3 d,-0 |
+        d'-3 d,-0 | \break
 
         c'-2 c,-3 |
         b'-1 b,-2 |
         a'-4 a,-1 |
-        g'-3 g,-0 |
+        g'-3 g,-0 | \break
 
       }
    \end{lilypond}
-   
-
    \clearpage
+
 \end{document}
